Bug 275858 - Do no assign shorcut keys to tabs which conflict "user defined shortcuts" in preferences
Summary: Do no assign shorcut keys to tabs which conflict "user defined shortcuts" in ...
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.2.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 0.10
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-16 23:19 UTC by Mohd Asif Ali Rizwaan
Modified: 2012-06-13 21:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mohd Asif Ali Rizwaan 2011-06-16 23:19:34 UTC
Version:           0.2.0
OS:                Linux

0. I've assigned "alt+d" and "alt+o" as location shortcut; 
1. but when i open a few sites like osnews; 
2. rekonq assigns alt+o to osnews tab (tab with osnews page)
3. this causes the error
"The key sequence 'Alt+O' is ambiguous. Use 'Configure Shortcuts'
from the 'Settings' menu to solve the ambiguity.
No action will be triggered."

4. Rekonq should skip my custom shortcut keys, and only assing keys which are not there in the settings!

thanks.

Reproducible: Always

Steps to Reproduce:
1. open rekonq
2. goto preference->shortcuts assign alt+o for location (any shortcut with alt+o to create a conflict)
3. type osnews.com or osnews (google search)
4. rekonq assigns the first character 'O' (of Osnews) as alt+o for first tab
5. pressing alt+o causes the bug.


Expected Results:  
rekonq should not assign already existing shortcuts to tabs.

OS: Linux (i686) release 2.6.39-ARCH
Compiler: gcc
Comment 1 Marc Deop 2012-01-07 01:09:58 UTC
This is not rekonq's fault as it happens in every kde application.

It's probably related to kdelibs although it needs a deeper investigation
Comment 2 Weng Xuetian 2012-05-02 09:13:25 UTC
Use  KAcceleratorManager::setNoAccel(this);
in tabbar.cpp will fix this problem.
Comment 3 Andrea Diamantini 2012-06-13 21:14:53 UTC
Git commit 7dff8ec8da795298c1d79e0fdd06f41f725a13aa by Andrea Diamantini.
Committed on 13/06/2012 at 23:14.
Pushed by adjam into branch 'master'.

Fix ambiguous tab shortcuts

See comment #2 about the fix (Thanks, Weng!)

M  +4    -0    src/tabbar.cpp

http://commits.kde.org/rekonq/7dff8ec8da795298c1d79e0fdd06f41f725a13aa