Fix ambiguous tab shortcuts

See comment #2 about the fix (Thanks, Weng!)

BUG: 275858